Wip/New-Cnes-Form

--- a/src/app/modules/cnes/components/cnes-form-skeleton/cnes-form-skeleton.component.html
+++ b/src/app/modules/cnes/components/cnes-form-skeleton/cnes-form-skeleton.component.html
@@ -10,9 +10,9 @@
         <p-skeleton />
       </div>
       <div class="input-container">
-        <label for="codigo_estabelecimento_saude"
-          >Código de Saúde do Estabelecimento</label
-        >
+        <label for="codigo_estabelecimento_saude">
+          Código de Saúde do Estabelecimento
+        </label>
         <p-skeleton />
       </div>
     </div>
@@ -38,9 +38,25 @@
       <label for="descricao_turno_atendimento">Descrição do Turno</label>
       <p-skeleton />
     </div>
-    <div class="input-container">
-      <label for="endereco_estabelecimento">Endereço</label>
-      <p-skeleton />
+    <div style="display: flex; gap: 2rem">
+      <div class="input-container">
+        <label for="codigo_cep_estabelecimento">CEP</label>
+        <p-skeleton />
+      </div>
+      <div class="input-container" style="width: 100%">
+        <label for="endereco_estabelecimento">Endereço</label>
+        <p-skeleton />
+      </div>
+    </div>
+    <div style="display: flex; gap: 2rem">
+      <div class="input-container">
+        <label for="numero_estabelecimento">Numero</label>
+        <p-skeleton />
+      </div>
+      <div class="input-container" style="width: 100%">
+        <label for="bairro_estabelecimento">Bairro</label>
+        <p-skeleton />
+      </div>
     </div>
   </p-card>
 </div>
