--- a/src/app/modules/cnes/components/cnes-table/cnes-table.component.html
+++ b/src/app/modules/cnes/components/cnes-table/cnes-table.component.html
@@ -4,6 +4,7 @@
 <app-cnes-list-skeleton />
 } @else {
 <div class="card">
+  <p-button (click)="openNewEstablishment()" severity="info" class="new-button">+ Novo Estabelecimento</p-button>
   <p-table
     [value]="cnes"
     stripedRows
