Finish Cnes Form

--- a/src/app/modules/cnes/components/cnes-form/cnes-form.component.html
+++ b/src/app/modules/cnes/components/cnes-form/cnes-form.component.html
@@ -161,7 +161,7 @@
         />
 
         @if(!this.code) {
-        <p-button label="Enviar" (onClick)="onSubmit()" />
+        <p-button label="Enviar" (onClick)="onSubmit()" [disabled]="this.form.invalid"/>
         }
       </div>
     </form>
